ドキュメントの更新 packoptリスト作成ツールを同梱、スクリプトエディタのメニューに追加
Former-commit-id: 429b46e3e535d98d96661a1eaa75b1a1d232ee97

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -32,10 +32,10 @@
 					<li><a href="#EX_RUNTIME">拡張ランタイム<span class="new">（New!）</span></a></li>
 					<li><a href="#GAMEDEV">HSPによるゲーム開発<span class="new">（New!）</span></a></li>
 					<li><a href="#ONEKEY_HELP">ワンキーヘルプ</a></li>
-					<li><a href="#MAKE_EXE">実行ファイルの作成方法</a></li>
+					<li><a href="#MAKE_EXE">実行ファイルの作成方法<span class="new">（New!）</span></a></li>
 					<li><a href="#MAKE_SAVER">スクリーンセーバーの作成</a></li>
 					<li><a href="#START_OPT">起動オプションのパース</a></li>
-					<li><a href="#ICONINS">実行ファイルの書き換えについて</a></li>
+					<li><a href="#ICONINS">実行ファイルの書き換えについて<span class="new">（New!）</span></a></li>
 					<li><a href="#SCRIPT_SAMPLE">HSPスクリプトサンプル</a></li>
 					<li><a href="#HIDDEN_WINDOW">メインウィンドウ非表示EXEファイル</a></li>
 					<li><a href="#NO_DIR_MOVE">ディレクトリ移動の無効化</a></li>
@@ -87,11 +87,11 @@
 				<ol>
 					<li><a href="#TASK">HSPのタスク</a></li>
 					<li><a href="#SCR_AND_WND">画面とウィンドウ</a></li>
-					<li><a href="#PRINT">フォントと文字表示<span class="new">（New!）</span></a></li>
+					<li><a href="#PRINT">フォントと文字表示</a></li>
 					<li><a href="#IMG_FILE">画像ファイルの利用</a></li>
 					<li><a href="#CUR_POSITION">カレントポジション</a></li>
 					<li><a href="#GUI_OBJECT">配置オブジェクト</a></li>
-					<li><a href="#LAYER_OBJECT">レイヤーオブジェクト<span class="new">（New!）</span></a></li>
+					<li><a href="#LAYER_OBJECT">レイヤーオブジェクト</a></li>
 					<li><a href="#CUR_COLOR">カレントカラー</a></li>
 					<li><a href="#CEL_FUNCTION">CEL関連命令について</a></li>
 					<li><a href="#INPUT">入力の取得<span class="new">（New!）</span></a></li>
@@ -104,10 +104,10 @@
 					<li><a href="#COMMON_DIR">コモンディレクトリ</a></li>
 					<li><a href="#ERR_MSG">エラーメッセージ</a></li>
 					<li><a href="#TOLERANCE_LEVEL">HSPシステムの許容範囲</a></li>
-					<li><a href="#PACKFILE">PACKFILEと暗号化</a></li>
+					<li><a href="#PACKFILE">ファイルのパックと暗号化<span class="new">（New!）</span></a></li>
 					<li><a href="#CNVSRC">Cソースへの変換</a></li>
 					<li><a href="#BOOTOPT">起動設定#bootoptの利用について</a></li>
-					<li><a href="#CALLBACK">コールバックルーチン<span class="new">（New!）</span></a></li>
+					<li><a href="#CALLBACK">コールバックルーチン</a></li>
 				</ol>
 			</li>
 		</ol>
@@ -486,16 +486,17 @@
 			通常は、「hsptmp.exe」という実行ファイルが生成されますが、ソーススクリプト内のオプション指定により、
 			ファイル名を始めとして、様々な設定を行なうことができます。
 		</p>
+		<p>
+			#pack、及び#epack命令をスクリプトに記述することで、使用するファイルを実行ファイルに埋め込むことができます。
+		</p>
 
-		<pre>#pack "ファイル名"            [PACKFILE追加ファイル指定]
-#epack "ファイル名"           [PACKFILE追加ファイル指定]</pre>
+		<pre>#pack "ファイル名"            [パックされるファイルの指定]
+#epack "ファイル名"           [暗号化パックされるファイルの指定]</pre>
 
 		<p>
-			上の例では、packfileに追加されるファイルを指定しています。
 			指定されたファイルは、実行ファイル作成時にリソースとして一緒にパックされます。
 			#packは、通常の形式でパックします。#epackは、暗号化してパックされます。
-			重複したファイルを追加しようとした場合には、無視されます。
-			「start.ax」は、実行ファイル自動作成の際に自動的に追加されるため、特に追加ファイルとして指定する必要はありません。
+			("data/*"のようにフォルダとワイルドカードによる複数指定が可能です)
 		</p>
 		<p>
 			#pack、#epackで指定されたファイルは、スクリプトからは使用できますが、
@@ -543,16 +544,13 @@
 		</table>
 
 		<p>
-			次の例では、「test.scr」というスクリーンセーバーを「hsp3utf.hrt」というランタイムを使用して作成します。
+			次の例では、「test.scr」というスクリーンセーバーを作成します。
 		</p>
 		<pre>	#packopt type 2
 	#packopt name "test"
-	#packopt runtime "hsp3utf.hrt"</pre>
+		</pre>
 		<p>
 			尚、「start.ax」はデフォルトで暗号化されたものがpackfileに追加されます。
-			また、「#packopt runtime "ランタイムファイル名"」で指定された
-			ランタイムファイル(拡張子がhrtのもの)は、hspcmp.dllと同じディレクトリか、
-			または、runtimeディレクトリに置かれているものが使用されます。
 		</p>
 		<p>
 			「初期ウィンドウ非表示SW」のオプションで1を指定した場合には、「初期ウィンドウ非表示SW」がONになります。
@@ -612,6 +610,12 @@
 		</p>
 		<p>
 			「実行ファイル自動作成」を行なう際に、ソーススクリプトに#packopt命令により適用する情報を記述しておくことが可能です。<br>
+
+		#packopt命令の記述をサポートするツールが用意されています。
+		HSPスクリプトエディタの「ツール」→「PACKOPT項目の作成」メニューを選択して、#packoptリスト作成ツールを呼び出してください。
+		( #packopt命令についての詳細は、#packopt命令のヘルプ項目をご覧ください。)
+		</p>
+		<p>
 			#packopt命令で指定する、icon,version,manifest,lang,upxのキーワードは、実行ファイル生成後にiconinsツールを使用して、実行ファイルの書き換えを行ないます。
 		</p>
 <pre>
@@ -4389,7 +4393,7 @@ p3=0～(0)  : 改行コード認識フラグ(0=なし/1,2=認識)
 			それ以外の機能は、HSP3相当として使用することが可能です。
 			拡張プラグインや、COM関連命令も使用可能です。(ただし、プラグイン側が
 			BMSCR構造体を取得して使用するような場合に動作エラーとなることがあります。)
-			実行ファイル作成、PACKFILEの埋め込み、暗号化などもサポートしています。
+			実行ファイル作成、データファイルの埋め込み、暗号化などもサポートしています。
 		</p>
 
 		<h3 id="ON_EVENT">割り込み</h3>
@@ -4618,23 +4622,58 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 		</table>
 
 
-		<h3 id="PACKFILE">PACKFILEと暗号化</h3>
+		<h3 id="PACKFILE">ファイルのパックと暗号化</h3>
 		<p>
-			HSPでは、実行ファイルを作成する際に、読み込まれるファイルをまとめて
-			1つの実行ファイルに埋め込むことが可能です。
-			これを、ファイルのパックと呼んでおり、まとめるファイル一覧の情報を
-			記録したファイルをパックファイル(PACKFILE)と言います。
+			HSPでは、実行ファイルを作成する際に、画像や音声などスクリプトから読み込まれるファイルをまとめて
+			1つのファイルや実行ファイル(.exe)に埋め込むことが可能です。
+			これを、ファイルのパックと呼んでおり、外部のユーザーがファイルを見たり参照することを防ぐことができます。
 		</p>
 		<p>
-			パックファイルには、無制限に複数のファイルを指定することができます。
-			パックファイル内で階層を表現することはできません。
-			ファイル名は、拡張子も含めて15文字までが識別対象になります。
-			(ロングファイル名でも認識します。)
+			ファイルのパックでは、無制限に複数のファイルを指定することができます。
+			「\」または「/」で区切ることで階層を表現することができます。
+			ファイル名は、フォルダ名と拡張子も含めて259文字までが識別対象になります。
 		</p>
 		<p>
-			また、1つの実行ファイルにパックするのではなく、独立したファイルに
-			パックすることも可能です。この独立したファイルをDPMファイルと呼び、
+			ファイルをパックして実行ファイルに埋め込む最も簡単な方法は、#pack、#epack命令をスクリプトに記述することです。
+		</p>
+
+		<pre>
+		#pack "filename"
+		#epack "filename"
+
+		"filename" : パックされるファイル
+		</pre>
+		<p>
+		パックされるファイルを指定します。
+		実行ファイル自動作成(ctrl+F9)により、指定されたファイルが実行ファイルに埋め込まれます。
+		#packは、通常の形式でパックします。 #epackの場合は暗号化してパックされます。
+		</p>
+		<pre>
+		例 :
+			#epack "a.bmp"
+		</pre>
+		<p>
+		上の例では、スクリプトと同じフォルダ内にある「a.bmp」 というファイルを暗号化して実行ファイルと一緒にパックします。
+		</p>
+		<pre>
+		例 :
+			#pack "data/*"
+		</pre>
+		<p>
+		ファイル名には「*」の記号を使ったワイルドカード指定が可能です。
+		上のように「data/*」と指定した場合は、dataフォルダ以下のすべてのファイルがパックされます。
+		また、「*.png」のように指定することで、拡張子が「.png」のファイルをすべてパックすることが可能です。
+		</p>
+		<p>
+			実行ファイルにパックして埋め込むのではなく、独立した1ファイルとして
+			保存することも可能です。この独立したファイルをDPMファイルと呼び、
 			拡張子が「.dpm」になります。
+		<br>
+			DPMファイルを作成するには、スクリプトエディタの「ツール」→「指定フォルダからDPM作成」メニューを選択してツールを呼び出してください。
+			<br>
+			このツールでは、指定フォルダに含まれるファイルをDPMファイル内に暗号化して格納することができます。
+			<br>
+			デフォルトでは、「data.dpm」というファイルが作成されます。このファイルは、実行時にカレントディレクトリにあれば自動的に読み込まれます。
 		</p>
 		<p>
 			実行ファイルを作成した場合に、ファイルを読み込みのために検索される順序は、
@@ -4655,30 +4694,47 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 			<dt>実行ファイルに暗号化してパック</dt>
 			<dd>
 				<p>
-					HSP2.61と同様に、パックされる内容をもとに生成された暗号キーを使用して、
-					暗号化を行ないます。標準的な方法です。
+					パックされる内容をもとに生成された暗号キーを使用して、暗号化を行ないます。標準的な方法です。
 				</p>
 			</dd>
 			<dt>DPMファイルに暗号化してパック</dt>
 			<dd>
 				<p>
-					HSP3.0から追加された、個別の暗号キーを設定した状態でDPMファイルを作成します。
+					個別の暗号キーを設定した状態でDPMファイルを作成します。
 					作成されたDPMファイルは、暗号化に使用されたキーコード(32bit値)をスクリプトから
-					指定しない限り正しく開くことができません。
+					指定しない限り正しく開くことができません。(キーコードの指定については、chdpm命令のヘルプを参照してください)
 					暗号キーをスクリプト内に持っているため解析が難しく、
 					実行ファイルにパックする場合よりも、セキュリティは高くなります。
-				</p>
-				<p>
-					暗号キー設定によるDPMファイルを作成は、スクリプトエディタの「ツール」→「指定フォルダからDPM作成」メニューを
-					選択することでツールを呼び出すことができます。
-					このツールでは、指定フォルダに含まれるファイルをDPMファイル内に暗号化して格納することができます。
-					詳しくは、サンプルスクリプトの「mkpack.hsp」を参照してください。
+					暗号キー設定によるDPMファイルを作成は、DPM作成ツール上で行うことができます。
 				</p>
 			</dd>
 		</dl>
 		<p>
-			#epack命令により暗号化されたファイルをbload命令で読み込む場合は、
-			ファイルのオフセット値を指定することができませんので注意してください。
+			実行ファイルや.dpmにパックされるファイルは、HSPから読み込まれるファイルに限られています。
+			mci命令によりWindowsから読み込まれるファイルや、外部のツールやプラグインが読み込むファイルを埋め込むことはできませんのでご注意ください。
+		</p>
+		<p>
+			HSP3.7からパックして埋め込まれるデータの形式がDPM2という新しいものになりました。
+			これにより、HSP3.6までの.dpmファイルとは互換性がなくなっています。以前に作られた.dpmは再度作成するようにしてください。<br>
+			HSP3.7では、複数の.dpmファイルを同時に使用することが可能です。
+			.dpmファイルを参照する場合は、chdpm命令を使用します。
+		</p>
+		<pre>
+		chdpm "dpmname",p1,p2
+
+		"dpmname" : DPMファイル名(拡張を除いた名前)
+		p1(-1)    : 暗号化キー指定
+		p2(-1)    : スロット番号(0～15)
+		</pre>
+		<p>
+			読み込み対象となる.dpmファイル(複数ファイルがパックされたデータファイル)を設定します。<br>
+			chdpm命令が実行されると、以降は"dpmname"で指定したファイルを、DPM形式でパックされたデータとして扱います。
+			DPMファイルの初期化中にエラーが発生した場合は、エラー12(「ファイルが見つからないか無効な名前です」)となります。
+			<br><br>
+			スロット番号は、DPMファイルを読み込む先の番号になります。0から15までの値を指定可能です。マイナス値を指定した場合は、自動的に新しいスロット番号が割り当てられます。
+			これにより、複数のDPM形式ファイルを同時に参照して読み込み対象とさせることが可能です。
+			exeファイルに埋め込まれたファイルはスロット番号0となります。
+			DPMファイル名に空の文字列("")を指定した場合は、指定されたスロット番号は読み込み対象から破棄します。
 		</p>
 		<p>
 			HSPが提供する暗号化機能は、必ずしも完全なセキュリティを保障するものではありません。
@@ -4691,7 +4747,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 		<p>
 			HSP3のスクリプトを、C/C++言語用のソースコードとしてコンパイル可能な形に変換することができます。<br>
 			これは、HSP3ソースコンバーター(hsp3cnv)を呼び出すことにより行ないます。
-			通常は、HSPスクリプトエディタの「ツール」→「指定ファイルをCソースに変換」メニューを選択して、サポートツール(cnvsrc)を呼び出してください。
+			通常は、HSPスクリプトエディタの「ツール」→「HSP3Dish / Cソース変換」メニューを選択して、サポートツール(HSP3Dish Helper)を呼び出してください。
 		</p>
 		<p>
 			変換されたCソースコードの運用については、C/C++言語についての知識が必要となります。詳しくは、 <a href="hsp3cnv.txt">HSP3ソースコンバーターマニュアル</a>をご覧ください。
