--- a/package/win32/doclib/update37.htm
+++ b/package/win32/doclib/update37.htm
@@ -35,6 +35,18 @@
 		<dl>
 
 			<dt>
+			DPMファイル及びファイル暗号化埋め込み機能の更新
+			</dt><br>
+			<dd>
+			<p>
+			HSP3.6までのファイル埋め込み機能(PACKFILE)ではファイル名の長さに制約やフォルダの階層構造をサポートしていませんでした。<br>
+			HSP3.7では、ファイル埋め込み機能を更新してフォルダ構造や暗号化の刷新、HGIMG4への対応などを行っています。
+			また、HSP3Dishでの使用や対応ツールの強化などにより、今までよりも便利にご使用いただけます。
+			詳しくは、<a href="hspprog.htm#PACKFILE">プログラミング・マニュアル</a>をご覧ください。<br>
+			</p>
+			</dd>
+
+			<dt>
 			HSP3Dish android版のビルド機能修正
 			</dt><br>
 			<dd>
