ドキュメントとヘルプの修正
Former-commit-id: ce19fccc43b165a8beb50d7528616dcf78dcaaf3

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2021(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2022(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="title">
 	<h1>HSP3Dish プログラミングマニュアル</h1>
 
@@ -284,7 +284,7 @@
 	 +256                  : フルスクリーン
 		</pre><p>
 		p4に256を指定した場合は、指定された解像度のフルスクリーンとして初期化されます。<br>
-		また、スクリーンサイズ変更時は、通常ランタイムとは異なり、それまでに読み込んだすべての画像バッファは失われますので注意してください。
+		また、スクリーンサイズ変更時は、通常ランタイムとは異なり、<b>それまでに読み込んだすべての画像バッファは失われます</b>ので注意してください。
 		</p>
 
 
