--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -4742,6 +4742,19 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 			いきたいと考えています。また、ファイル解析や改ざんなどに対する対処は、
 			今後も継続していく予定です。
 		</p>
+		<p>
+		DPMファイル及びパックされた埋め込みファイルは、以下の点にご注意してご利用ください。
+		</p>
+		<ul>
+		<li>ファイル名には日本語を含む全角文字を使用できますが、内部ではUTF8文字列で格納されます。このためWindows上では、SJISからUnicodeへの変換が行われます。SJIS・Unicodeそれぞれ固有の文字列は正しく変換されないためご注意ください。
+		<li>ファイル名の長さは「フォルダ名と拡張子も含めて259文字まで」となります。全角文字も1文字として換算されます。
+		<li>Windows版のDPMファイルは、1ファイルで最大2GB、全体で4GBまでのサイズをサポートしています。今後のバージョンではさらに大きなサイズに対応する予定です。
+		<li>Linux、android、iOS、html5(js)でWindows版のDPMファイルを読み込むことが可能です。ただし暗号化に対応しているのは、現在のバージョンでは、android版のみとなっています。
+		</ul>
+		<p>
+		「data.dpm」ファイルがカレントに置かれた状態では、そちらに格納されたファイルが読み込み時に優先されます。
+		正しいファイルが読み込まれない、更新されないといった状態が起こらないようご注意ください。
+		</p>
 
 		<h3 id="CNVSRC">Cソースへの変換</h3>
 		<p>
