ドキュメントとヘルプの修正
Former-commit-id: 0856d2f78b6110658bafdecca772de5d5ab89604

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -4722,7 +4722,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 		<pre>
 		chdpm "dpmname",p1,p2
 
-		"dpmname" : DPMファイル名(拡張を除いた名前)
+		"dpmname" : DPMファイル名
 		p1(-1)    : 暗号化キー指定
 		p2(-1)    : スロット番号(0～15)
 		</pre>
