HSPDAプラグインにバイナリデータ検索を行うbinmatch命令を追加 iconinsの修正 ドキュメントの修正
Former-commit-id: 24690e25f0d44c36eafb6c51264f67ea771d48c6

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -46,6 +46,7 @@
 					<li><a href="#HSPUTF">UTF8対応版ランタイムの利用について</a></li>
 					<li><a href="#HSP64">64bit(x64)対応版ランタイムの利用について</a></li>
 					<li><a href="#HSED3CUSTOM">スクリプトエディタの拡張機能について</a></li>
+					<li><a href="#HSPTV_RESOURCE">HSPTVフォルダ素材について<span class="new">（New!）</span></a></li>
 				</ol>
 			</li>
 			<li><a href="#DESCRIPTION">スクリプト記述の基本</a>
@@ -927,6 +928,34 @@
 			背景画像表示機能により、指定した画像をエディタ背景右下に常に表示しておくことができます。オプションの「エディタ」→「色」項目で設定することができます。<br>
 			ファイルの自動バックアップ機能は、オプションの「全般」→「動作」から設定することができます。一定時間ごとに編集中のファイルのバックアップを作成することで、強制終了やリセットなど不測の事態にスクリプトを失うことがなくなります。(バックアップは、HSPのインストールフォルダ内の「backup」フォルダに作成されます。)
 		</p>
+
+
+		<h3 id="HSPTV_RESOURCE">HSPTVフォルダ素材について</h3>
+		<p>
+		「HSPTVフォルダ素材」は、HSPであらかじめ用意された画像やサウンドの素材データです。
+		この素材は、HSPがインストールされたフォルダ以下の「hsptv」フォルダに含まれています。
+		たとえば、背景素材として使用できる「bg01.jpg」や、効果音として使用てきる「se_bom.wav」が含まれています。<br>
+		HSPでは、このフォルダにあるデータを自由に参照して使用することができます。
+		</p>
+		<pre>
+			celload "bg01.jpg",1	; HSPTVフォルダ素材を使用する
+		</pre>
+		<p>
+		フォルダ名を付けずに「HSPTVフォルダ素材」にあるファイル名を記述することで、素材を読み込むことができます。
+		また、HSPTVフォルダを示すマクロ「dir_tv」を入れて「celload dir_tv+"bg01.jpg"」のようにフォルダを明示してファイル名を記述することもできます。<br>
+		実行ファイルを作成して配布する場合は、必要な素材だけを#packまたは#epack命令で追加して、「実行ファイル自動作成」を行ってください。
+		</p>
+		<pre>
+			#pack "bg01.jpg"
+		</pre>
+		<p>
+		上の例では、「bg01.jpg」のファイルが実行ファイル作成時に埋め込まれてて使用されます。
+		</p>
+		<p>
+		HSPTVフォルダ素材についての詳細は、別途ドキュメント<a href="hsptv_res.htm">hsptv_res.htm</a>を参照してください。
+		</p>
+
+
 
 
 		<h2 id="DESCRIPTION">基本文法</h2>
@@ -4560,6 +4589,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 			注意して使用してください。
 		</p>
 
+
 		<h3 id="COMMON_DIR">コモンディレクトリ</h3>
 		<p>
 			「#include」命令で挿入されるファイルは、通常はソースファイルと
@@ -4584,6 +4614,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 			コモンディレクトリに置かれています。
 			また、hsp3util.asなど、よく使われるファイルも格納されています。
 		</p>
+
 
 		<h3 id="ERR_MSG">エラーメッセージ</h3>
 		<p>
