iOS版HSP3Dishマニュアルの更新
Former-commit-id: b6f4574c1ac661cc1775e1be0605076ae53bf44c

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2021(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2022(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="title">
 	<h1>HSP3Dish iOS版プログラミングガイド</h1>
 
@@ -66,7 +66,7 @@
 	それまでの準備については、既存のマニュアル等をご覧ください。
 	<br>
 	検証に使用しているXCodeのバージョンは、XCode12です。
-	使用するSDKのバージョンは、iOS14以降、動作環境はiOS10以降を想定しています。
+	使用するSDKのバージョンは、iOS14以降、動作環境はiOS10.15以降を想定しています。
 	</p>
 
 	<h2 id="SAMPLE">iOSフォルダについて</h2>
@@ -75,9 +75,6 @@
 	iOSフォルダには、HSP3Dishランタイム及びxcode用の基本プロジェクトが含まれています。
 
 	<ul>
-	<li>iHSP30フォルダ - HSP3Dishランタイム本体</li>
-	<li>gameplayフォルダ - HGIMG4用ランタイム</li>
-	<li>extlibフォルダ - HGIMG4用ライブラリ</li>
 	<li>hspprojフォルダ - HSP3Dish基本プロジェクト</li>
 	<li>hspproj_gpフォルダ - HGIMG4基本プロジェクト</li>
 	</ul>
@@ -105,7 +102,7 @@
 	</ul>
 	<p>
 	上記の指定ができたら、「変換」ボタンを押してください。
-	この時、「XCode8用プロジェクトを生成」「出力ソースをUTF-8に変換」のチェックをONにしておくのを忘れないでください。
+	この時、「XCode用プロジェクトを生成」「出力ソースをUTF-8に変換」のチェックをONにしておくのを忘れないでください。
 	(また、HGIMG4ランタイムを使用している場合は、「HGIMG4を使用する」にもチェックを入れてください。)
 	</p>
 	<p>
@@ -121,11 +118,7 @@
 
 	<p>
 	実際にiOS上で動作させる場合には、XCode上でプロジェクトをコンパイルする必要があります。<br>
-	<a href="#MAKECPP">スクリプトの準備</a>で出力した、XCode用プロジェクトフォルダと、「iHSP30」フォルダ(HSPアーカイブ内のiOSフォルダに同梱されています。)をMacOSX上にコピーしてください。<br>
-	</p>
-	<p>
-	必ず作成されたプロジェクトのフォルダと同じ階層に、「iHSP30」フォルダを配置してください。<br>
-	(HGIMG4プロジェクトの場合は、「extlib」「gameplay」も同様に配置してください。)
+	<a href="#MAKECPP">スクリプトの準備</a>で出力した、XCode用プロジェクトフォルダをMacOSX上にコピーしてください。<br>
 	</p>
 	<p>
 	<img src="hsp3dish/s_folder.jpg"><br>
@@ -299,6 +292,9 @@
 	最低限必要なアイコンファイルとして、以下の3つのファイルが登録されています。
 	それぞれ画像は同じもので、解像度が異なります。自分で用意した画像を使用する場合は、アイコンファイルを差し替えてください。
 	</p>
+	<p>
+	※HSP3Dish Helperで、プロジェクト生成を行った後に「アイコン作成」のボタンを押すことで、それぞれのサイズに対応したアイコン画像生成を補助するツールが起動します。
+	</p>
 	<ul><pre>
 	icon57.png - iOS上で標準的に使用されるアイコン(57×57ドット)
 	icon58.png - Spotlight及び設定画面で使用されるアイコン(58×58ドット)
@@ -357,7 +353,8 @@
 	ただし、Windowsとは異なりファイル名の大文字・小文字が区別されますので正しくファイル名を記述する必要がありますのでご注意ください。<br>
 	リソースに、data.dpmファイルを追加することにより、複数ファイルがパックされたデータにアクセスすることが可能です。
 	data.dpmファイルは、Windows上のHSP開発システム上で作成可能です。詳しくは、dpmファイル、パックファイル等の項目を参照してください。
-	また、HSP3Dishでは、音声ファイル(wav、mp3など)やアイコンなどiOSのシステムがアクセスするファイルは含めることができませんのでご注意下さい。ファイル名の長さ制限(12文字以内)などは、HSPのpackfile仕様と同様です。
+	また、HSP3Dishでは、音声ファイル(wav、mp3など)やアイコンなどiOSのシステムがアクセスするファイルは含めることができませんのでご注意下さい。<br>
+	現在のバージョンでは、暗号化されたDPMファイルには対応していませんのでご注意ください。
 	</p>
 
 	<h2 id="EXECURL">exec命令のサポートについて</h2>
@@ -365,7 +362,7 @@
 	exec命令でURLスキームを指定することにより、Safariブラウザを指定したURLで開くことができます。
 	</p>
 	<pre>
-	exec "http://hsp.tv/",16
+	exec "https://hsp.tv/",16
 	</pre>
 	<p>
 	上の例では、「hsp.tv」のサイトを開きます。
@@ -607,7 +604,7 @@
 	</p>
 	<ul>
 	<li>各種システム情報取得</li>
-	<li>http接続、ブラウザの呼び出しサポート</li>
+	<li>https接続、ブラウザの呼び出しサポート</li>
 	<li>GAMECENTER、Google Play Servicesなど各種サービスの設定</li>
 	</ul>
 	<p>
