簡易的な麻雀の処理をまとめたmod_mahjongモジュールとサンプルを追加
Former-commit-id: 375cf59b10d9ce4eb3b0ae5ce290f9f632e25020

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -29,9 +29,9 @@
 		<li><a href="#SAMPLE">サンプルプロジェクト</a></li>
 		<li><a href="#EMULATOR">androidエミュレータ</a></li>
 		<li><a href="#RUNPROJ">実機への転送と実行</a></li>
-		<li><a href="#DISHPHELPER">HSP3Dish P Helperについて</a></li>
-		<li><a href="#AND_ICON">アイコンの作成について</a></li>
-		<li><a href="#DATAFILE">データファイルの準備</a></li>
+		<li><a href="#DISHPHELPER">HSP3Dish P Helperについて<span class="new">（New!）</span></a></li>
+		<li><a href="#AND_ICON">アイコンの作成について<span class="new">（New!）</span></a></li>
+		<li><a href="#DATAFILE">データファイルの準備<span class="new">（New!）</span></a></li>
 		<li><a href="#SYSINFO">システム情報の取得</a></li>
 		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し</a></li>
 		<li><a href="#DISHINI">hsp3dish.ini設定ファイルについて</a></li>
@@ -277,7 +277,7 @@
 	<p>
 	HSP3.7β2から、しまくろねこさん作成によるAndroid/iOSアイコン作成ツールをパッケージに同梱しています。<br>
 	「オプション」タブを選択した状態で、「Android/iOSアイコン作成ツール」ボタンを押すことでツールが起動されます。<br>
-	詳しい使用方法、<a href="../hspsdk/android_ios_make_icon/ReadMe.txt">ツールの説明書</a>を参照してください。
+	詳しい使用方法は、<a href="../hspsdk/android_ios_make_icon/ReadMe.txt">ツールの説明書</a>を参照してください。
 	</p>
 
 
@@ -289,6 +289,18 @@
 	ただし、Windowsとは異なりファイル名の大文字・小文字が区別されますので正しくファイル名を記述する必要がありますのでご注意ください。<br>
 	HGIMG4プロジェクトを作成している場合は、「res」フォルダをそのままassetsフォルダにコピーしてご使用ください。
 	</p>
+	<p>
+	HSP3.7β2以降では、複数のファイルをパックしたdpmファイルを使用することが可能です。
+	Windows上で作成した「data.dpm」ファイルを、他のファイルと同様にプロジェクトディレクトリ内のassetsフォルダに入れてください。
+	「data.dpm」ファイルは起動時に自動的に読み込まれてパックされたファイルを読み込むことができるようになります。
+	(ただし、.mp3や.oggファイルなどシステム側で読み込むファイルをパックすることはできませんのでご注意ください)
+	<br>
+	また、暗号化されたdpmファイルにも対応しているほか、chdpm命令によりdpmファイルを追加することが可能です。
+	<br>
+	詳しい使用方法は、HSPプログラミング・マニュアルの<a href="hspprog.htm#PACKFILE">ファイルのパックと暗号化</a>を参照してください。
+	</p>
+
+
 
 	<h2 id="SYSINFO">システム情報の取得</h2>
 	<p>
