--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -4685,6 +4685,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 		</pre>
 		<p>
 		上の例では、スクリプトと同じフォルダ内にある「a.bmp」 というファイルを暗号化して実行ファイルと一緒にパックします。
+		(フォルダ内になかった場合は、標準の素材フォルダ(hsptvフォルダ)内が検索されます)
 		</p>
 		<pre>
 		例 :
@@ -4701,9 +4702,20 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 			拡張子が「.dpm」になります。
 		<br>
 			DPMファイルを作成するには、スクリプトエディタの「ツール」→「指定フォルダからDPM作成」メニューを選択してツールを呼び出してください。
-			<br>
-			このツールでは、指定フォルダに含まれるファイルをDPMファイル内に暗号化して格納することができます。
-			<br>
+		</p>
+		<p><center><img src="img/packmakelist.png"></center></p>
+		<p>
+			このツールでは、指定フォルダに含まれるファイルをリストアップしてDPMファイルとして保存することができます。(#pack、#epackの記述リストとしてスクリプトエディタに貼り付けることも可能です。)
+		</p>
+		<ol>
+			<li>プログラム(設定)名を新規作成する</li>
+			<li>データファイルがあるフォルダを検索フォルダとして指定する</li>
+			<li>左側の拡張子リストに必要な種別を登録する(png,wav,jpgなど)</li>
+			<li>リスト作成ボタンを押すことで下のボックスにパックされる対象のファイルがリストアップされます</li>
+			<li>DPMファイル作成ボタンで対象のファイルをパックしたファイルを保存できます。
+(リストをそのままスクリプトエディタに貼り付けることもできます)</li>
+		</ol>
+		<p>
 			デフォルトでは、「data.dpm」というファイルが作成されます。このファイルは、実行時にカレントディレクトリにあれば自動的に読み込まれます。
 		</p>
 		<p>
@@ -4714,6 +4726,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 			<li>実行ファイルにパックされたファイル</li>
 			<li>実行ファイルと同じ場所に置かれた「data.dpm」にパックされたファイル</li>
 			<li>カレントディレクトリにあるファイル</li>
+			<li>標準の素材フォルダ(hsptvフォルダ)にあるファイル(エディタからの実行時のみ)</li>
 		</ol>
 		<p>
 			パックする際に、暗号化を施すことができます。
