ドキュメントの更新
Former-commit-id: a5b48852a700dd22aac4b5265fa599036ffda56d

--- a/package/win32/doclib/update37.htm
+++ b/package/win32/doclib/update37.htm
@@ -23,6 +23,7 @@
 			<li><a href="#HSP3UPDATE">HSP3.7アップデート概要</a></li>
 			<li><a href="#HSP3C">コンパクト(hsp3c)版ランタイムについて</a></li>
 			<li><a href="#HGIMG4TOOL">HGIMG4ツールの更新について</a></li>
+			<li><a href="#HSP3DISH_DRAW">HSP3Dishのboxf描画命令の修正について</a></li>
 		</ol>
 		
 		<!-- 本文 -->
@@ -109,6 +110,20 @@
 			</dd>
 
 		</dl>
+
+
+	<h2 id="HSP3DISH_DRAW">HSP3Dishのboxf描画命令の修正について</h2>
+		<p>
+		HSP3.7β2からWindows版のHSP3Dishでboxf命令の塗りつぶし範囲が標準ランタイムと異なる不具合を修正しています。<br>
+		それまで右と下の1ドットがいままで描画されていなかったものを正常な動作に修正しています。
+		ほとんどの場合問題は出ないものと考えていますが、それまでの動作を基準に作成していたスクリプトで描画の結果が異なる場合がありますのでご了承ください。
+		システムリクエストにより、従来の描画に戻すことも可能です。その場合は、以下のようにsetreq命令を記述してください。
+		</p>
+		<pre>
+			setreq SYSREQ_OLDBOXF,1		; HSP3.6のboxf動作を維持する
+		</pre>
+		<p>
+		</p>
 
 
 
