--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -31,7 +31,7 @@
 		<li><a href="#GMODE">gmode命令について</a></li>
 		<li><a href="#GMULCOLOR">gmulcolor命令について</a></li>
 		<li><a href="#GFILTER">gfilter命令について</a></li>
-		<li><a href="#SYSREQ">setreq、getreq命令について</a></li>
+		<li><a href="#SYSREQ">setreq、getreq命令について<span class="new">（New!）</span></a></li>
 		<li><a href="#MTOUCH">マルチタッチ情報の取得について</a></li>
 		<li><a href="#SOUND">サウンド機能について</a></li>
 		<li><a href="#HTTP">http通信機能について</a></li>
@@ -442,12 +442,64 @@
 		type : 設定タイプ(SYSREQ_???)
 	</pre>
 	<pre>
-	設定タイプ名      読み書き(*)   内容
-	-------------------------------------------
-	SYSREQ_CLSMODE        RW        背景のクリアフラグ
-	SYSREQ_CLSCOLOR       RW        背景クリア色
-	SYSREQ_TIMER          R         ミリ秒単位のタイマー値
-	SYSREQ_PLATFORM       R         HSP3Dishを実行しているプラットフォーム
+	設定タイプ名             読み書き(*)   内容
+---------------------------------------------------------------------------
+	SYSREQ_MAXMODEL          RW            HGIMG3最大モデル数
+	SYSREQ_MAXOBJ            RW            HGIMG3/4最大オブジェクト数
+	SYSREQ_MAXTEX            RW            HGIMG3/4最大テクスチャ数
+	SYSREQ_MAXMOC            RW            HGIMG3最大MOC数
+	SYSREQ_DXMODE            RW            DirectXモード(Windowsのみ)
+	SYSREQ_DXHWND            R             DirectXウインドウハンドル(Windowsのみ)
+	SYSREQ_DXWIDTH           RW            DirectXフルスクリーンXサイズ(Windowsのみ)
+	SYSREQ_DXHEIGHT          RW            DirectXフルスクリーンYサイズ(Windowsのみ)
+	SYSREQ_COLORKEY          RW            DirectXカラーキー(Windowsのみ)
+	SYSREQ_RESULT            R             DirectX初期化結果(Windowsのみ)
+	SYSREQ_RESVMODE          R             DirectXビデオ初期化結果(Windowsのみ)
+	SYSREQ_PKTSIZE           RW            パケットサイズ(未使用)
+	SYSREQ_MAXEVENT          RW            HGIMG3/4最大イベント数
+	SYSREQ_PTRD3D            R             Direct3Dクラスポインタ(Windows/HGIMG3のみ)
+	SYSREQ_PTRD3DDEV         R             Direct3DDeviceクラスポインタ(Windows/HGIMG3のみ)
+	SYSREQ_MDLANIM           RW            モデルあたりのアニメーション最大数(HGIMG3)
+	SYSREQ_CALCNORMAL        RW            Xファイルモデル法線再計算スイッチ(HGIMG3)
+	SYSREQ_2DFILTER          RW            2D描画時のテクスチャ補間モード(HGIMG3)
+	SYSREQ_3DFILTER          RW            3D描画時のテクスチャ補間モード(HGIMG3)
+	SYSREQ_OLDCAM            RW            カメラ注視モードの動作(HGIMG3)
+	SYSREQ_QUATALG           RW            Xファイルモデルアニメーション補間モード(HGIMG3)
+	SYSREQ_DXVSYNC           RW            フルスクリーンモード時のVSYNC待ちモード(HGIMG3)
+	SYSREQ_DEFTIMER          RW            hgsyncの時間待ちモード(HGIMG3)
+	SYSREQ_NOMIPMAP          RW            テクスチャのMIPMAP生成モード(HGIMG3)
+	SYSREQ_DEVLOST           RW            DirectXデバイスの存在フラグ
+	SYSREQ_MAXEMITTER        RW            HGIMG3エミッター最大数
+	SYSREQ_THROUGHFLAG       RW            X方向のボーダー処理フラグ(HGIMG3)
+	SYSREQ_OBAQMATBUF        RW            OBAQ用マテリアルバッファ数(HGIMG3)
+	SYSREQ_2DFILTER2         RW            2D直接描画時のテクスチャ補間モード(HGIMG3)
+	SYSREQ_FPUPRESERVE       RW            FPU演算精度設定オプション(HGIMG3)
+	SYSREQ_CLSMODE           RW            背景のクリアフラグ
+	SYSREQ_CLSCOLOR          RW            背景クリア色
+	SYSREQ_CLSTEX            RW            背景クリアテクスチャID(HGIMG3)
+	SYSREQ_TIMER             R             ミリ秒単位のタイマー値
+	SYSREQ_PLATFORM          R             HSP3Dishを実行しているプラットフォーム
+	SYSREQ_FPS               R             フレームレート(HGIMG4)
+	SYSREQ_VSYNC             RW            VSync待ちモード(HGIMG4)
+	SYSREQ_MAXMATERIAL       RW            HGIMG4最大マテリアル数
+	SYSREQ_PHYSICS_RATE      RW            OBAQ用物理パラメーター(OBAQ)
+	SYSREQ_MAXOBAQ           RW            OBAQ用オブジェクト最大数(OBAQ)
+	SYSREQ_MAXLOG            RW            OBAQ用コリジョンログ最大数(OBAQ)
+	SYSREQ_DEFAULT_WEIGHT    RW            OBAQ用デフォルトWeight値(OBAQ)
+	SYSREQ_DEFAULT_MOMENT    RW            OBAQ用デフォルトMoment値(OBAQ)
+	SYSREQ_DEFAULT_DAMPER    RW            OBAQ用デフォルトDamper値(OBAQ)
+	SYSREQ_DEFAULT_FRICTION  RW            OBAQ用デフォルトFriction値(OBAQ)
+	SYSREQ_MESCACHE_MAX      RW            メッセージキャッシュ最大数(HSP3Dish)
+	SYSREQ_DLIGHT_MAX        RW            ディレクショナルライト最大数(HGIMG4)
+	SYSREQ_PLIGHT_MAX        RW            ポイントライト最大数(HGIMG4)
+	SYSREQ_SLIGHT_MAX        RW            スポットライト最大数(HGIMG4)
+	SYSREQ_LOGWRITE          RW            終了時のログ出力スイッチ(HGIMG4)
+	SYSREQ_FIXEDFRAME        RW            固定フレームレートスイッチ(HGIMG4)
+	SYSREQ_DRAWNUMOBJ        R             描画されたオブジェクト数(HGIMG4)
+	SYSREQ_DRAWNUMPOLY       R             描画されたポリゴン数(HGIMG4)
+	SYSREQ_USEGPBFONT        RW            gpbフォント使用スイッチ(HGIMG4)
+	SYSREQ_FIXMESALPHA       RW            文字描画alpha値固定モード(HSP3Dish)
+	SYSREQ_OLDBOXF           RW            従来のboxf描画モード(HSP3Dish)
 
 	(*)項目ごとに、読み(R)書き(W)の可否が異なります
 	</pre>
