ドキュメントリンク修正
Former-commit-id: ac3ee892859bc36b2f95e36865c512a59963aacf

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -117,7 +117,7 @@
 		<h2 id="QUICK_START">クイックスタート</h2>
 		<p>
 			このマニュアルは、HSPによるWindows上でのプログラミング方法と言語仕様全般を解説したものになっています。
-			初めてプログラミングに挑戦するという人は、最初に「<a href="beginner/start.htm">初心者のためのHSP入門</a>」を
+			初めてプログラミングに挑戦するという人は、最初に「<a href="beginner/START.HTM">初心者のためのHSP入門</a>」を
 			読むことをお勧めします。<br>
 			Windows版以外の開発環境では、動作がことなる場合がありますが、HSP3の基本的な文法及び動作の仕組みは、プラットフォームが異なっても変わりません。
 			詳しくは、<a href="hsp3.htm">HSP3概要</a>を参照してください。
