--- a/package/win32_en/doclib/hspprog.htm
+++ b/package/win32_en/doclib/hspprog.htm
@@ -117,7 +117,7 @@
 <h2 id = "QUICK_START"> Quick Start </h2>
 		<p>
 This manual explains how to program HSP on Windows and general language specifications.
-For those who are new to programming, first read "<a href="beginner/start.htm"> Introduction to HSP for beginners </a>"
+For those who are new to programming, first read "<a href="beginner/START.HTM"> Introduction to HSP for beginners </a>"
 Recommended to read. <br>
 In development environments other than the Windows version, the operation may differ, but the basic grammar and operation mechanism of HSP3 do not change even if the platform is different.
 See <a href="hsp3.htm"> HSP3 Overview </a> for more information.
@@ -479,7 +479,7 @@ If the input is blank, it refers to a directory called HSPHELP under HSED3.EXE.
 
 		<p>
 For more information about HSP Docs Library and help files
-See <a href="HSP Docs Library / HDL_Readme.txt"> HDL_Readme.txt </a> "<a href="HSP Docs Library / HS_BIBLE.txt"> HS_BIBLE.txt </a> please.
+See <a href="HSP Docs Library/HDL_Readme.txt"> HDL_Readme.txt </a> "<a href="HSP Docs Library/HS_BIBLE.txt"> HS_BIBLE.txt </a> please.
 		</p>
 
 
