ドキュメントの修正
Former-commit-id: 906b6a24af834f038bf52122fc82657c213e24bc

--- a/package/win32/doclib/hsptv_res.htm
+++ b/package/win32/doclib/hsptv_res.htm
@@ -271,7 +271,7 @@
 		<p>
 
 		<p>
-		HSPTVフォルダ素材は、HSP(Hot Soup Procrssor)フルセットの一部として提供され、onion softwareが著作権を持っています。
+		HSPTVフォルダ素材は、HSP(Hot Soup Processor)フルセットの一部として提供され、onion softwareが著作権を持っています。
 		</p>
 		<p>
 		HSPTVフォルダ素材は、ユーザーがソフトを作成する際に、自由に使用・改変・配布することができます。
