[HSP3Dish][Windows] デバイスロストからの復帰時に画面クリアされない不具合を修正 珠音ドットフレームワーク及び16ドットサイズ珠音素材を追加
Former-commit-id: d8ead60cb2570eb520c674189bf9b088955ee684

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -49,6 +49,7 @@
 			<ul>
 				<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル（hsp3dish_prog.htm）</a></li>
 				<li><a href="doclib/sprite.html">標準スプライトプログラミングガイド（sprite.html）</a></li>
+				<li><a href="doclib/dotfw.html">珠音（たまね）ドットフレームワークマニュアル（dotfw.html）</a></li>
 				<li><a href="doclib/hgimg4.html">HGIMG4プログラミングガイド（hgimg4.html）</a></li>
 				<ul>
 					<li><a href="doclib/hgimg4_unity.html">HGIMG4 Unity連携ガイド（hgimg4_unity.html）</a></li>
