--- a/package/win32/index_en.htm
+++ b/package/win32/index_en.htm
@@ -48,6 +48,7 @@
 			<ul>
 <li> <a href="doclib/hsp3dish_prog.htm"> Programming Manual (hsp3dish_prog.htm) </a> </li>
 <li> <a href="doclib/sprite.html"> Standard Sprite Programming Guide (sprite.html) </a> </li>
+<li><a href="doclib/dotfw.html">Tamane Dot Framework Manual（dotfw.html）</a></li>
 <li> <a href="doclib/hgimg4.html"> HGIMG4 Programming Guide (hgimg4.html) </a> </li>
 				<ul>
 <li> <a href="doclib/hgimg4_unity.html"> HGIMG4 Unity Cooperation Guide (hgimg4_unity.html) </a> </li>
