ドキュメントの修正
Former-commit-id: 365bbbcdf4818a693e6ac1b9edf25bf8e09a2f58

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -4262,9 +4262,7 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		</p>
 		<p>
 			ですから、この機能はあくまで簡易のループということをご了承ください。
-			そもそもループポインタが指定できないので、前奏まで戻るのも変なんですが、
-			ゲーム中にBGMが終わってしまうのが寂しいのを避けるためと割り切って使う
-			ことはできるかもしれません。
+			ループポインタが指定できないので、割り切って使うことはできるかと思います。
 		</p>
 		<p>
 			MIDIのデバイスドライバによっては、MIDI演奏をストップした直後に、再びMIDI
