スクリプトエディタの更新 HSP3.7b3ランタイムの更新
Former-commit-id: 783bed40408347aff23f9982ed829566e657aba3

--- a/package/win32/doclib/update37.htm
+++ b/package/win32/doclib/update37.htm
@@ -24,6 +24,9 @@
 			<li><a href="#HSP3C">コンパクト(hsp3c)版ランタイムについて</a></li>
 			<li><a href="#HGIMG4TOOL">HGIMG4ツールの更新について</a></li>
 			<li><a href="#HSP3DISH_DRAW">HSP3Dishのboxf描画命令の修正について</a></li>
+			<li><a href="#PACKFILE_DPM">DPM2形式による複数ファイルのパックにいて</a></li>
+			<li><a href="#HSP3DISH_HELPER">HSP3Dishサポートツールにいて</a></li>
+			<li><a href="#DOTFW">珠音ドットフレームワークにいて</a></li>
 		</ol>
 		
 		<!-- 本文 -->
@@ -125,6 +128,43 @@
 		<p>
 		</p>
 
+
+	<h2 id="PACKFILE_DPM">DPM2形式による複数ファイルのパックにいて</h2>
+		<p>
+		HSP3.7からパックして埋め込まれるデータの形式がDPM2という新しいものになりました。
+		これにより、いままでよりも制約の少ない自由なファイルのパック、暗号化を利用することができます。
+		( ただし、HSP3.6までの.dpmファイルとは互換性がなくなっています。以前に作られた.dpmは再度作成するようにしてください。)<br>
+		HSP3.7では、複数の.dpmファイルを同時に使用することができるほか、ファイル名の長さやサイズの制限が緩和されています。
+		<br>
+		詳しくは、<a href="hspprog.htm#PACKFILE">「ファイルのパックと暗号化」</a>の項目を参照してください。
+		</p>
+
+
+	<h2 id="HSP3DISH_HELPER">HSP3Dishサポートツールにいて</h2>
+		<p>
+		HSP3Dishでのプロジェクト設定やdpmファイルなどの作成をサポートするツールが新規で追加されています。
+		以下のサポートツールは、HSP3Dish HelperやHSPスクリプトエディタから起動することができます。
+		</p>
+		<pre>
+		ツール名                         起動方法
+		--------------------------------------------------------------------------
+		Dish P Helper                    HSP3Dish Helper Androidタブから
+		#packoptリスト作成ツール         スクリプトエディタ「ツール」メニューから
+		#packリスト作成ツール            スクリプトエディタ「ツール」メニューから
+		Android/iOSアイコン作成ツール    HSP3Dish Helper Android/iOSタブから
+		</pre>
+		<p>
+		</p>
+
+
+	<h2 id="DOTFW">珠音ドットフレームワークにいて</h2>
+		<p>
+		「珠音（たまね）ドットフレームワーク」は、ドット絵のHSP3オフィシャル素材とHSP3Dish上で使用できるライブラリのセットです。
+		ゲームに特化したシンプルな命令セットとオールインワンの素材パッケージで手軽にレトロスタイルの自作ゲームを作り始めることが可能です。 作成したゲームは、WindowsだけでなくWebやラズパイ、Linux、android、iOSなどで発表することが可能です。
+		サンプルスクリプトが「sample/dotfw」フォルダに用意されていますのでお試しください。
+		<br>
+		詳しくは、<a href="dotfw.html">珠音ドットフレームワークマニュアル</a>を参照してください。
+		</p>
 
 
 		<!-- フッター -->
