サンプルとドキュメントの修正
Former-commit-id: 737222e9c36f6f25beaa6836cd35b712578be831

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -34,7 +34,7 @@
 				<li><a href="doclib/update37.htm">HSP3.7 新機能ハイライト（update37.htm）</a></li>
 			</ul>
 			<li><a href="doclib/hspprog.htm">プログラミングマニュアル・基本仕様ガイド（hspprog.htm）</a></li>
-			<li><a href="doclib/beginner/start.htm">初心者のためのHSP入門（beginner/start.htm）</a></li>
+			<li><a href="doclib/beginner/START.HTM">初心者のためのHSP入門（beginner/START.HTM）</a></li>
 			<li><a href="doclib/faq.htm">よくある質問（faq.htm）</a></li>
 			<li><a href="doclib/error.htm">エラーメッセージ一覧（error.htm）</a></li>
 			<li><a href="doclib/plugin.htm">拡張プラグイン・モジュール一覧（plugin.htm）</a></li>
