--- a/package/win32/index_en.htm
+++ b/package/win32/index_en.htm
@@ -33,7 +33,7 @@
 <li> <a href="doclib/update37.htm"> HSP3.7 New Feature Highlights (update37.htm) </a> </li>
 			</ul>
 <li> <a href="doclib/hspprog.htm"> Programming Manual / Basic Specification Guide (hspprog.htm) </a> </li>
-<li> <a href="doclib/beginner/start.htm"> Introduction to HSP for beginners (beginner / start.htm) </a> </li>
+<li> <a href="doclib/beginner/START.HTM"> Introduction to HSP for beginners (beginner / START.HTM) </a> </li>
 <li> <a href="doclib/faq.htm"> Frequently Asked Questions (faq.htm) </a> </li>
 <li> <a href="doclib/error.htm"> Error message list (error.htm) </a> </li>
 <li> <a href="doclib/plugin.htm"> List of extended plug-in modules (plugin.htm) </a> </li>
