noteadd命令の引数でnotefind関数を使用した場合に書き込み内容が壊れる不具合を修正 mes/print命令による表示が1023文字で強制的に改行される不具合を修正 [HGIMG4] オフスクリーンのスプライト描画時のために解像度を再設定するes_screen命令を追加 [HGIMG4] シェーダーソースの先頭にある#versionディレクティブを維持するように修正
Former-commit-id: aed2fc67102ca99bbb8471e99f836df77895d024

--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2021(c)</p>
+	<p id="COPY">HSP : Hot Soup Processor ver3.7 / onion software 1997-2022(c)</p>
 	<h1>標準スプライトプログラミングガイド</h1>
 
 	<p><img src="hsp3dish/es_test5.jpg"></p>
@@ -36,6 +36,7 @@
 		<li><a href="#EFFECT_SPRITE">スプライトの変形と効果</a></li>
 		<li><a href="#CALLBACK_SPRITE">スプライトコールバック</a></li>
 		<li><a href="#MAP_SPRITE">BGマップ描画機能</a></li>
+		<li><a href="#DRAWBUFFER">異なるバッファへのスプライト描画</a></li>
 	</ol>
 
 
@@ -991,6 +992,38 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	(p2,p3)で指定されたマップの位置から、文字列に含まれる文字コードを右に向かって書き込みます。<br>
 	p4パラメーターで、文字コードに対するオフセット値を指定します。通常は0か省略して構いません。たとえば「A」という文字は文字コード65で、65という値をマップに対して書き込みます。
 改行コードが含まれている場合は、次の行に移動します。
+	</p>
+
+
+	<h2 id="DRAWBUFFER">異なるバッファへのスプライト描画</h2>
+
+	<p>
+	HGIMG4ランタイムでは、オフスクリーンのバッファにスプライト描画を行うことが可能です。
+	<br>
+	gsel命令でオフスクリーンバッファを指定してes_draw命令で描画が可能ですが、メインの画面(バッファID0)と解像度が異なる場合は、解像度の再設定が必要になるので注意してください。
+	</p>
+	<pre>
+		es_screen p1,p2			スプライト描画解像度設定
+			p1(0)=X方向の描画解像度
+			p2(0)=Y方向の描画解像度
+	</pre>
+	<p>
+	es_screen命令は、スプライトの描画解像度を再設定します。<br>
+	p1,p2パラメーターで指定されたサイズを画面が描画解像度として設定されます。
+	p1,p2パラメーターに0またはマイナス値を指定した場合は、現在の描画先画面のサイズが使用されます。
+	</p>
+	<pre>
+	es_ini
+	buffer 1, 320, 240, screen_offscreen
+	gsel 1
+	es_screen		; スプライト描画解像度を再設定する
+	redraw 0
+	es_draw
+	redraw 1
+	</pre>
+	<p>
+	上のように解像度を設定することで、メインの画面(バッファID0)と異なる解像度のオフスクリーンバッファにスプライトを正しく描画することができます。<br>
+	es_screen命令でスプライトの描画解像度が再設定されると、自動的にスプライト有効エリアも再設定されますので注意してください。
 	</p>
 
 
