ドキュメントの更新
Former-commit-id: 622b7b7685ed0d6f1ba871f2baf6f209d2d05286

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -417,7 +417,7 @@
 			<dd>
 				<p>
 				HSP3標準ランタイムに比べて高速な画面の書き換えが可能な<a href="hsp3dish_prog.htm">HSP3Dishランタイム</a>が用意されています。<br>
-				これらのランタイムは、Windows上だけでなくandroid,iOS,linux,html5など幅広い環境で動作させることが可能です。
+				これらのランタイムは、Windows上だけでなくandroid,iOS,linux,ウェブブラウザなど幅広い環境で動作させることが可能です。
 				描画にもDirectX、OpenGLといったGPU支援のあるAPIを使用しているため大量の画像を処理しても速度が落ちにくいメリットがあります。<br>
 				また、<a href="sprite.html">標準スプライト機能</a>を使うことにより手軽に2Dの物体(スプライト)を管理することができ、大幅に工数が削減できます。<br>
 				HSP3Dishランタイムは、HSP3標準ランタイムと比べてサポートされていない機能(複数のウインドウサポートなど)があり、描画の手順にも若干の違いがあります。<br>
@@ -4070,16 +4070,16 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		読み込み先のバッファを指定可能になっています。
 		<PRE>
 		　例 :
-			celload "a.bmp",1
+			celload "a.png",1
 		</PRE>
-		上の例では、「a.bmp」という画像をウィンドウID1に読み込みます。
+		上の例では、「a.png」という画像をウィンドウID1に読み込みます。
 		これは、buffer命令でウィンドウID1を初期化して、picload命令で画像を
 		読み込むという処理を1度に行ないます。
 		また、celload命令では空いているウィンドウIDに対して読み込みを行なうことが
 		可能になっています。
 		<PRE>
 		　例 :
-			celload "a.bmp"
+			celload "a.png"
 			id = stat
 		</PRE>
 		上の例では、変数idに読み込まれたウィンドウIDが代入されます。
@@ -4090,12 +4090,12 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		できます。celput命令は、2Dスプライトに近い描画方法を提供します。
 		<PRE>
 		　例 :
-			celload "a.bmp",1
+			celload "a.png",1
 			pos 100,100
 			gmode 2
 			celput 1
 		</PRE>
-		上の例では、ウィンドウID1にある画像(「a.bmp」の画像)を(100,100)の位置に、
+		上の例では、ウィンドウID1にある画像(「a.png」の画像)を(100,100)の位置に、
 		コピーモード2で描画します。
 		描画位置は、pos命令で設定されたカレントポジションとなります。
 		描画される画像のサイズは、画像全体(ウィンドウID1のサイズ)になります。
@@ -4135,7 +4135,7 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		celdiv命令は、ウィンドウIDごとにパーツのサイズ分割を設定しておくための命令です。
 		<PRE>
 		　例 :
-			celload "a.bmp",1
+			celload "a.png",1
 			celdiv 1,64,64
 		</PRE>
 		上の例では、ウィンドウID1の画像を64×64の画像パーツ単位に分割します。
@@ -4161,7 +4161,7 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		右下にするなど自由な変更を行なえます。また、回転もこの基点を中心に行います。
 		<PRE>
 		　例 :
-			celload "a.bmp",1
+			celload "a.png",1
 			celdiv 1,64,64,32,32
 		</PRE>
 		上の例では、ウィンドウID1の画像を64×64のパーツ単位に分割し、
