--- a/package/win32/doclib/update37.htm
+++ b/package/win32/doclib/update37.htm
@@ -24,9 +24,10 @@
 			<li><a href="#HSP3C">コンパクト(hsp3c)版ランタイムについて</a></li>
 			<li><a href="#HGIMG4TOOL">HGIMG4ツールの更新について</a></li>
 			<li><a href="#HSP3DISH_DRAW">HSP3Dishのboxf描画命令の修正について</a></li>
-			<li><a href="#PACKFILE_DPM">DPM2形式による複数ファイルのパックにいて</a></li>
-			<li><a href="#HSP3DISH_HELPER">HSP3Dishサポートツールにいて</a></li>
-			<li><a href="#DOTFW">珠音ドットフレームワークにいて</a></li>
+			<li><a href="#PACKFILE_DPM">DPM2形式による複数ファイルのパックについて</a></li>
+			<li><a href="#HSP3DISH_HELPER">HSP3Dishサポートツールについて</a></li>
+			<li><a href="#DOTFW">珠音ドットフレームワークについて</a></li>
+			<li><a href="#OGGFILE">oggファイルのオンメモリ再生について</a></li>
 		</ol>
 		
 		<!-- 本文 -->
@@ -108,7 +109,9 @@
 			<dd>
 			<p>
 			<a href="hgimg4.html">HGIMG4</a>の3Dモデル変換に使用するHGIMG4ツール(gpbconv)の機能修正を行っています。<br>
-			3Dモデル変換時のマテリアル名に日本語など英文字以外を含む場合、正しく認識されないことがあるため、「マテリアル名を英文字のみに修正」「マテリアル名を自動設定」オプション指定を追加しました。
+			変換された3Dデータのプレビュー機能が実装されているほか、
+			3Dモデル変換時のマテリアル名に日本語など英文字以外を含む場合、正しく認識されないことがあるため、マテリアル名修正に関するオプション指定を追加しました。
+			また、モデルファイルとは別にアニメーションデータをFBXファイルで用意したものを結合するためのオプションが追加されています。
 			</p>
 			</dd>
 
@@ -164,6 +167,24 @@
 		サンプルスクリプトが「sample/dotfw」フォルダに用意されていますのでお試しください。
 		<br>
 		詳しくは、<a href="dotfw.html">珠音ドットフレームワークマニュアル</a>を参照してください。
+		</p>
+
+
+	<h2 id="OGGFILE">oggファイルのオンメモリ再生について</h2>
+		<p>
+		HSP3.7β4から、HGIMG3及びhspoggプラグインを使用したoggファイル再生をオンメモリで行うよう修正されています。
+		<br>
+		これにより、暗号化されたdpmファイルや埋め込みデータを含めてHSP3が扱うファイルシステムからの読み込みが可能になりました。従来までのストリーミングによる再生を行う方法も選択できますので、状況に応じてお使い頂けます。
+		</p>
+		<pre>
+		ファイル種別                     再生方法
+		--------------------------------------------------------------------------
+		wave形式(拡張子.wav)             オンメモリ再生(埋め込みデータ対応)
+		ogg vorbis形式(拡張子.ogg)       オンメモリ再生(埋め込みデータ対応)
+		ogg vorbis形式(拡張子.s)         ストリーミング再生(埋め込みデータ非対応)
+		</pre>
+		<p>
+		詳しくは、<a href="hspogg.txt">hspoggマニュアル</a>を参照してください。
 		</p>
 
 
