--- a/package/win32/doclib/update37.htm
+++ b/package/win32/doclib/update37.htm
@@ -28,6 +28,7 @@
 			<li><a href="#HSP3DISH_HELPER">HSP3Dishサポートツールについて</a></li>
 			<li><a href="#DOTFW">珠音ドットフレームワークについて</a></li>
 			<li><a href="#OGGFILE">oggファイルのオンメモリ再生について</a></li>
+			<li><a href="#CELLOAD">celload命令のID割り当てについて</a></li>
 		</ol>
 		
 		<!-- 本文 -->
@@ -185,6 +186,23 @@
 		</pre>
 		<p>
 		詳しくは、<a href="hspogg.txt">hspoggマニュアル</a>を参照してください。
+		</p>
+
+
+	<h2 id="CELLOAD">celload命令のID割り当てについて</h2>
+		<p>
+		HSP3.7β4から、celload命令で読み込みウインドウIDの指定を省略(またはマイナス値)して自動的にIDを割り当てる際の動作が修正されています。<br>
+		ceload命令のウィンドウIDパラメーターが省略された場合には、すでに読み込まれている画像ファイルと同一のファイル名を指定した場合、 読み込まれているウインドウIDが再利用されます。
+		この動作は、標準のHSP3ランタイム、HSP3Dishランタイムを含むすべてのプラットフォームで適用されます。
+		<br>
+		これにより、重複した画像を読み込もうとした場合に、リソースを共有してメモリを節約することができます。
+		外部のモジュール内で画像を使用する場合や、ソースを再利用した場合にリソースの重複を防ぎます。
+		(既存のバージョンでは、重複した画像が読み込まれても常に新しいIDが割り当てられています。)
+		<br>
+		この変更により、既存のスクリプトで重複した画像ファイルを複数の異なるウインドウIDに読み込んでいる場合などで、IDの割り当てに不一致が起こる可能性があります。
+		ウインドウIDの再利用をしたくない場合は、「celload "a.png",celid_auto」のようにパラメーターにcelid_auto(または-1)を指定してください。
+		<br>
+		詳しくは、<a href="hspprog.htm#CEL_FUNCTION">CEL関連命令について</a>を参照してください。
 		</p>
 
 
